--- a/router-project-starter/router-project-starter/package.json
+++ b/router-project-starter/router-project-starter/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
